@@ -33,4 +33,10 @@ Zope Changes
 
       - Collector #2063: cleaned up some mess in MailHost.sendTemplate()
 
-
+      - View and attribute lookup order was changed to the following:
+           1. Unacquired attributes
+           2. Views
+           3. Acquired attributes
+        According to consensus in z3-five mailing list:
+        http://codespeak.net/pipermail/z3-five/2006q2/001474.html
+        
